# Buchungsblatt_kollekten

./: .gitignore  .markdownlint.json  CHECKLIST.md  CLAUDE.md  COMMANDS.md  Kollekten_1995_12.xlsx  Kollekten_2015_12.xlsx  Kollekten_2025_12.xlsx  Kollekten_2026_01.xlsx  Kollekten_2026_02.xlsx  Kollekten_2026_03.xlsx  Kollekten_2026_04.xlsx  PLAN_PWA.md  ai_connect_instruction.md  ai_connect_plan.md  app_entry.py  booking_store.py  classification.py  collection_ops.py  config.example.json  config.json  config.py  debug_failed.py  documents_plan.md  email_sender.py  excel_writer.py  file_actions.py  instructions.md  kollekten_app.spec  main.py  models.py  outlook_reader.py  overview.py  parser.py  processed_emails.json  pyproject.toml  references.py  requirements.txt  scheduler_setup.py  sekretariatssoftware_ai_roadmap.md  (+2 more)
.claude/: settings.local.json
app/: autostart.py  documents.py  main_window.py  reporter.py  setup_wizard.py  tray.py  updater.py
app/ai/: chat_widget.py  provider.py  tools.py
app/api/: server.py
app/api/routes/: actions.py  kollekten.py  live.py  status.py
app/api/static/: app.js  index.html  manifest.json  style.css  sw.js
app/tabs/: gottesdienst.py  verwaltung.py
app/theme/: office2010.qss
app/widgets/: collection_table.py
data/formulare/: index.json
data/knowledge/kirchenrecht/: HINWEIS.txt
data/kontakte/: regionalverwaltungen.json
data/reference/: abrechnungsobjekte.json  kollektenregeln.json  manual_overrides.json
installer/: license.txt  setup.nsi
