[project]
name = "kollekten-automation"
version = "1.0.0"
description = "Automatische Übertragung von Kollekten-E-Mails nach Excel"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "pywin32>=306",
    "python-dateutil>=2.9.0",
    "anthropic>=0.25.0",
]

[project.scripts]
kollekten = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]