[project]
name = "kollekten-automation"
version = "1.1.0"
description = "Automatische Übertragung von Kollekten-E-Mails nach Excel"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "pywin32>=306",
    "requests>=2.31.0",
]

[project.scripts]
kollekten = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
